components/container-registry/kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry
spec:
  selector:
    app: container-registry
  ports:
    - name: registry-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
